Finishing book service.

--- a/book-service/src/main/resources/application.properties
+++ b/book-service/src/main/resources/application.properties
@@ -1,2 +1,11 @@
+# server
 server.port=8080
-spring.data.mongodb.uri=mongodb://172.17.0.1:27017/books
+
+# mongodb
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=17017
+spring.data.mongodb.database=books
+
+# logging
+logging.level.org.springframework.data=debug
+logging.level.=error
