--- a/client-service/src/main/resources/application.properties
+++ b/client-service/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+# server
 server.port=8081
+
+# mongodb
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=17017
+spring.data.mongodb.database=clients
+
+# logging
+logging.level.org.springframework.data=debug
+logging.level.=error
