Configuring Eureka Service Registry.

--- a/book-service/src/main/resources/application.properties
+++ b/book-service/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 # server
 server.port=8080
 
+# application
+spring.application.name=book-service
+
 # mongodb
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=17017
