--- a/client-service/src/main/resources/application.properties
+++ b/client-service/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 # server
 server.port=8081
 
+# application
+spring.application.name=client-service
+
 # mongodb
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=17017
