--- a/settings.gradle
+++ b/settings.gradle
@@ -3,3 +3,4 @@ rootProject.name = 'bookstore-microservices'
 include 'book-service'
 include 'client-service'
 include 'reservation-service'
+include 'service-registry'
