--- a/reservation-service/build.gradle
+++ b/reservation-service/build.gradle
@@ -6,7 +6,9 @@ apply plugin: 'io.spring.dependency-management'
 
 group = 'br.com.wellingtoncosta'
 version = '1.0.0'
+
 sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 repositories {
     mavenCentral()
@@ -18,6 +20,7 @@ compileKotlin {
         jvmTarget = "1.8"
     }
 }
+
 compileTestKotlin {
     kotlinOptions {
         freeCompilerArgs = ["-Xjsr305=strict"]
@@ -26,12 +29,19 @@ compileTestKotlin {
 }
 
 dependencies {
-    compile "org.springframework.boot:spring-boot-starter-webflux:${springBootVersion}"
-    compile "org.springframework.boot:spring-boot-starter-data-mongodb-reactive:${springBootVersion}"
+    compile "org.springframework.boot:spring-boot-starter-webflux"
+    compile "org.springframework.boot:spring-boot-starter-actuator"
+    compile "org.springframework.boot:spring-boot-starter-data-mongodb-reactive"
     compile "org.springframework.cloud:spring-cloud-starter-netflix-eureka-client"
 
     compile "com.fasterxml.jackson.module:jackson-module-kotlin"
 
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:${kotlinVersion}"
     compile "org.jetbrains.kotlin:kotlin-reflect:${kotlinVersion}"
+}
+
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+    }
 }
