--- a/reservation-service/src/main/resources/application.properties
+++ b/reservation-service/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 # server
 server.port=8082
 
+# application
+spring.application.name=reservation-service
+
 # mongodb
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=17017
