--- a/reservation-service/build.gradle
+++ b/reservation-service/build.gradle
@@ -32,7 +32,9 @@ dependencies {
     compile "org.springframework.boot:spring-boot-starter-webflux"
     compile "org.springframework.boot:spring-boot-starter-actuator"
     compile "org.springframework.boot:spring-boot-starter-data-mongodb-reactive"
+
     compile "org.springframework.cloud:spring-cloud-starter-netflix-eureka-client"
+    compile "org.springframework.cloud:spring-cloud-starter-openfeign"
 
     compile "com.fasterxml.jackson.module:jackson-module-kotlin"
 
