--- a/client-service/build.gradle
+++ b/client-service/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'kotlin'
 apply plugin: 'kotlin-spring'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+apply plugin: 'com.palantir.docker'
 
 group = 'br.com.wellingtoncosta'
 version = '1.0.0'
@@ -44,4 +45,12 @@ dependencyManagement {
     imports {
         mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
     }
+}
+
+docker {
+    dependsOn build
+    def imageName = "${project.group}/${bootJar.baseName}:${project.version}"
+    name imageName
+    files bootJar.archivePath
+    buildArgs([JAR_FILE: "${bootJar.archiveName}"])
 }
