--- a/config-service/src/main/resources/config/book-service.yml
+++ b/config-service/src/main/resources/config/book-service.yml
@@ -1,10 +1,5 @@
 server:
-  port: ${PORT:0}
-
-#eureka:
-#  client:
-#    serviceUrl:
-#      defaultZone: http://localhost:8061/eureka/
+  port: 8080
 
 eureka:
   client:
