--- a/reservation-service/pom.xml
+++ b/reservation-service/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>br.com.wellingtoncosta</groupId>
-	<artifactId>reservatrion-service</artifactId>
+	<artifactId>reservation-service</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
