--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,39 @@
 
 	<name>spring-microservices</name>
 
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>2.1.0.RELEASE</version>
+	</parent>
+
 	<modules>
 		<module>config-service</module>
 		<module>book-service</module>
 		<module>client-service</module>
 		<module>reservation-service</module>
 		<module>discovery-service</module>
-    </modules>
+		<module>gateway-service</module>
+	</modules>
+
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-dependencies</artifactId>
+				<version>Greenwich.M3</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+
+	<repositories>
+		<repository>
+			<id>jboss-public</id>
+			<name>JBoss Public</name>
+			<url>https://repository.jboss.org/nexus/content/repositories/public/</url>
+		</repository>
+	</repositories>
 
 </project>
