--- a/proxy-service/src/main/resources/bootstrap.yml
+++ b/proxy-service/src/main/resources/bootstrap.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: gateway-service
+    name: proxy-service
   cloud:
     config:
       uri: http://localhost:8088
