--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
-.gradle
-/build/
-!gradle/wrapper/gradle-wrapper.jar
+target/
+!.mvn/wrapper/maven-wrapper.jar
 
 ### STS ###
 .apt_generated
@@ -23,6 +22,3 @@ nbbuild/
 dist/
 nbdist/
 .nb-gradle/
-
-### Kotlin ###
-out/
